# Quark-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Quark-Core/: CMakeLists.txt
Quark-Core/include/: quark.hpp
Quark-Core/include/application/: application.hpp
Quark-Core/include/render/: render_api.hpp  render_context.hpp  render_device.hpp
Quark-Core/include/render/buffer/: buffer.hpp  buffer_type.hpp
Quark-Core/include/util/: library_helper.hpp
Quark-Core/src/: main.cpp
Quark-Debug/: CMakeLists.txt
Quark-Debug/include/: memory_block.hpp  stack_allocator.hpp
Quark-Debug/src/: stack_allocator.cpp
Quark-Render/: CMakeLists.txt
Quark-Render/QuarkGL/: CMakeLists.txt
Quark-Render/QuarkGL/src/: render_device.cpp
Quark-Tools/: CMakeLists.txt
Quark-Tools/ModelConvertor/: CMakeLists.txt
Quark-Tools/ModelConvertor/include/: convertor.hpp
Quark-Tools/ModelConvertor/src/: convertor.cpp  main.cpp
