####################################################################################################
## [C++::PROJECT]
####################################################################################################
PROJECT(Quark-Core CXX)

####################################################################################################
## [C++::FILES]
####################################################################################################

FILE(GLOB_RECURSE CORE_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp")
FILE(GLOB_RECURSE CORE_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")

####################################################################################################
## [C++::EXECUTABLE]
####################################################################################################

ADD_EXECUTABLE(${PROJECT_NAME} ${CORE_HEADER_FILES} ${CORE_SOURCE_FILES})

####################################################################################################
## [C++::LINKED LIBRARIES]
####################################################################################################
IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    #using Linux

    TARGET_LINK_LIBRARIES(${PROJECT_NAME} dl)
ELSEIF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    #using Windows

ENDIF()
