####################################################################################################
## [C++::PROJECT]
####################################################################################################
PROJECT(Quark-Debug CXX)

####################################################################################################
## [C++::FILES]
####################################################################################################

FILE(GLOB_RECURSE DEBUG_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp")
FILE(GLOB_RECURSE DEBUG_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")

####################################################################################################
## [C++::EXECUTABLE]
####################################################################################################

ADD_LIBRARY(${PROJECT_NAME} SHARED ${DEBUG_HEADER_FILES} ${DEBUG_SOURCE_FILES})
