####################################################################################################
## [C++::INCLUDES]
####################################################################################################
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/ASSIMP)

####################################################################################################
## [C++::MODULES]
####################################################################################################
ADD_SUBDIRECTORY(ModelConvertor)
