####################################################################################################
## [C++::DEPENDENCIES]
####################################################################################################
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/Assimp)

####################################################################################################
## [C++::INCLUDES]
####################################################################################################
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/Assimp/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/GLM)

####################################################################################################
## [C++::MODULES]
####################################################################################################
ADD_SUBDIRECTORY(ModelConvertor)
