####################################################################################################
## [C++::PROJECT]
####################################################################################################
PROJECT(Quark-GL CXX)

####################################################################################################
## [C++::FILES]
####################################################################################################

FILE(GLOB_RECURSE GL_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp")
FILE(GLOB_RECURSE GL_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")

####################################################################################################
## [C++::EXECUTABLE]
####################################################################################################

ADD_LIBRARY(${PROJECT_NAME} SHARED ${GL_HEADER_FILES} ${GL_SOURCE_FILES})
