####################################################################################################
## [C++::PROJECT]
####################################################################################################
PROJECT(Quark-ModelConvertor CXX)

####################################################################################################
## [C++::FILES]
####################################################################################################

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

FILE(GLOB_RECURSE TOOL_MC_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp")
FILE(GLOB_RECURSE TOOL_MC_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")

####################################################################################################
## [C++::EXECUTABLE]
####################################################################################################

ADD_EXECUTABLE(${PROJECT_NAME} ${TOOL_MC_HEADER_FILES} ${TOOL_MC_SOURCE_FILES})

####################################################################################################
## [C++::LINKER]
####################################################################################################
TARGET_LINK_LIBRARIES(${PROJECT_NAME} assimp stdc++fs)
